# YOLO_Master

./: .gitignore  Tauri 应用现代化 UI 设计方案.md  build.bat  build_backend.ps1  build_portable.bat  dev_start.bat  main.py  requirements.txt  run_packed.bat  start_backend.bat  视觉模型工作站功能设计.md
backend/: backend.spec  main.py  requirements.txt  requirements_pack.txt
backend/core/: batch_renamer.py  dataset_manager.py  dataset_splitter.py  frame_extractor.py  image_cleaner.py  inference_engine.py  sanity_checker.py
backend/routers/: data_prep.py  dataset.py  export.py  inference.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: index.js  inference.js
frontend/src/components/inference/: CameraPanel.vue  DetectionList.vue  ImageFileList.vue  ImagePreviewPanel.vue  ModelLoader.vue  ParamConsole.vue  VideoTestPanel.vue
frontend/src/router/: index.js
frontend/src/utils/: debounce.js
frontend/src/views/: DataPrepView.vue  DatasetView.vue  ExportView.vue  InferenceView.vue
