[package]
name = "yolostudio"
version = "0.2.0"
description = "YOLO 视觉模型工作站"
authors = ["YoloMaster Team"]
license = "MIT"
repository = ""
default-run = "yolostudio"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "dialog-all", "window-all",
    "shell-open",
    "shell-sidecar",
    "shell-execute",
    "notification-all",
    "path-all",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch
# between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
